# subliminal-learning

./: .gitignore  CITATION.cff  README.md  pyproject.toml  requirements-lock.txt
.github/workflows/: validate.yml
Paper/: 00-START-HERE-FINAL-MAP.md  Makefile  README.md  preprint.tex  references.bib  supplement.tex
Paper/Learning/: arxiv-and-other-venues-guide.md  how-conference-submission-works.md  solo-aaai-reality-check.md  what-to-do-now.md  zero-background-guide.md
Paper/Manuscript/: Makefile  main.tex  references.bib
Paper/Rebuttal/: AAAI27-RULES-AND-TIMELINE.md  AUTHOR-FEEDBACK-CHECKLIST.md  EVIDENCE-INDEX.md  MOCK-REVIEWS.md  OPEN-DECISIONS.md  PACKAGE-START-HERE.md  README.md  RESPONSE-BANK.md  REVIEWER-ATTACK-MATRIX.md
Paper/Reproducibility/: README.md  verify_headlines.py
mnist/: experiment.py  make_figures.py  make_noise_figure.py  maximize.py  mechanism_check.py  noise_investigation.py  probe.py  quickstart.py  rebuild_csv.py  sweep.py
prompting/: base_vs_instruct.py  collect_causal_patch.py  collect_full_probe.py  collect_layerwise_probe.py  collect_sequence_probe.py  decompose.py  entanglement.py  geometry_metrics.py  make_figures.py  try_your_animal.py  utils.py
scaling/: LEARNING_GUIDE.md  analyze_causal_patch.py  analyze_external_transfer.py  analyze_geometry_scaling.py  analyze_layerwise_probe.py  analyze_sequence_probe.py  analyze_size_ladder.py  artifact.md  experiments.md  make_s4_figures.py  memory.md  paper_draft.md  plot_causal_patch.py  preregistration_s4.md  run_vast_70b.py  run_vast_causal_patch.py  run_vast_layerwise.py
(+139 files in other folders)
